# ourrecipes-api

./: Cargo.toml  README.md  template.yaml  todo.txt
src/: context.rs  database.rs  lib.rs  main.rs  model.rs  other.rs  schema.rs
src/db/: ShoppingList.rs
src/models/: ShoppingList.rs  direction.rs  group.rs  human.rs  ingredient.rs  listitem.rs  mod.rs  recipe.rs  review.rs  user.rs
src/routes/: ShoppingList.rs
src/services/: bookmarks.rs  human.rs  ingredient.rs  mod.rs  recipe.rs  review.rs  user.rs
