[package]
name = "example_rocket_lamb_api"
description = "An example of using Rocket Lamb with supporting build/deploy scripts"
repository = "https://github.com/GREsau/example-rocket-lamb-api"
version = "0.1.0"
authors = ["Graham Esau <graham.esau@vonage.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["rocket", "web", "lambda"]
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rocket = { version = "0.4.2", default-features = false }
rocket_lamb = "0.6.0"
serde_json = "1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "1.1.2"
jsonwebtokens-cognito = "0.1.0-alpha"


[dependencies.mongodb]
version = "0.11.0"
default-features = false
features = ["sync"]