[package]
name = "ourrecipes_api"
description = "Juniper backend for ourrecipes app"
version = "0.1.0"
authors = ["Ethan Cheatham <ethanwcheatham@gmail.com>"]
edition = "2018"
license = "MIT"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rocket = { version = "0.4.2", default-features = false }
rocket_lamb = "0.6.0"
serde_json = "1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "1.1.2"
jsonwebtokens-cognito = "0.1.0-alpha"
juniper = "0.14.2"
juniper_rocket = "0.5.2"
serde_derive = "1.0"
bson = "0.14.0"
lazy_static = "1.4.0"
mongodb = "0.9.2"
