[package]
name = "ourrecipes_api"
description = "Juniper backend for ourrecipes app"
version = "0.1.0"
authors = ["Ethan Cheatham <ethanwcheatham@gmail.com>"]
edition = "2018"
license = "MIT"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", default-features = false }
rocket_lamb = "0.6.0"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bson = "0.14.0"
lazy_static = "1.4.0"
mongodb = "0.9.2"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]